Añado registro, acceso y carrito

--- a/front/pasteleria2.0/base.html
+++ b/front/pasteleria2.0/base.html
@@ -64,5 +64,6 @@
 
     <!-- Agrego modernizer para identificar si el pc soporta ciertas características como webp -->
     <script src="build/js/bundle.min.js"></script>
+    <script src="js/carrito.js"></script>
 </body>
 </html>
